# rust-tools

./: Cargo.toml  LICENSE.md  README.md  test.csv
argument_parser/: Cargo.toml
argument_parser/src/: lib.rs
csv_file/: Cargo.toml
csv_file/src/: lib.rs
migformatting/: Cargo.toml
migformatting/src/: lib.rs
migparser/: Cargo.toml  README.md
migparser/src/: lib.rs
migparser/src/argument/: contents.rs  mod.rs
src/: csv_file.rs  formatting.rs  main.rs
text_file/src/: lib.rs
xinput/: Cargo.toml  README.md
xinput/src/: lib.rs  main.rs
xinput_visualiser/: Cargo.toml  README.md
