[package]
name = "rust_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "rust_tools"

[dependencies]
text_file = { path = "./text_file" }
csv_file = { path = "./csv_file" }
formatting = { path = "./formatting" }