[package]
name = "rust_tools"
version = "0.1.0"
edition = "2021"
default-run = "main"

[workspace]
members = ["csv_file", "migformatting", "migparser", "text_file"]

[dependencies]
text_file = { path = "./text_file" }
csv_file = { path = "./csv_file" }
migformatting = "0.1.0"
migparser = { path = "./migparser"}