[package]
name = "migformatting"
version = "0.1.0"
edition = "2021"
authors = ["Miguel Granero"]
description = "Simple string formatter"
license = "BSD-3-Clause"
keywords = ["string", "format", "formatting"]
repository = "https://github.com/Migran99/rust-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
